Bend-Green.demo-api-svc.a712e06237c0b734e21b5c8d15c72278e3fee03c
Running as unit: run-p1014242-i13594555.scope; invocation ID: 241844fb207640ad988392fd3a27300b
   Compiling proc-macro2 v1.0.36
   Compiling unicode-xid v0.2.2
   Compiling syn v1.0.89
   Compiling version_check v0.9.4
   Compiling libc v0.2.120
   Compiling autocfg v1.1.0
    Checking cfg-if v1.0.0
   Compiling log v0.4.14
   Compiling memchr v2.4.1
   Compiling serde_derive v1.0.136
   Compiling futures-core v0.3.21
   Compiling serde v1.0.136
   Compiling futures-channel v0.3.21
   Compiling futures-task v0.3.21
   Compiling standback v0.2.17
   Compiling yansi v0.5.0
   Compiling futures-util v0.3.21
   Compiling proc-macro2-diagnostics v0.9.1
    Checking pin-project-lite v0.2.8
   Compiling proc-macro-hack v0.5.19
   Compiling parking_lot_core v0.8.5
   Compiling indexmap v1.8.0
   Compiling httparse v1.6.0
   Compiling quote v1.0.15
    Checking bytes v1.1.0
    Checking futures-sink v0.3.21
   Compiling const_fn v0.4.9
   Compiling time v0.2.27
    Checking itoa v1.0.1
    Checking mio v0.8.2
    Checking signal-hook-registry v1.4.0
    Checking num_cpus v1.13.1
    Checking socket2 v0.4.4
   Compiling uncased v0.9.6
    Checking slab v0.4.5
    Checking once_cell v1.10.0
    Checking futures-io v0.3.21
    Checking pin-utils v0.1.0
   Compiling num-traits v0.2.14
   Compiling cookie v0.15.1
    Checking instant v0.1.12
   Compiling fnv v1.0.7
    Checking smallvec v1.8.0
   Compiling lazy_static v1.4.0
    Checking scopeguard v1.1.0
   Compiling ref-cast v1.0.6
   Compiling tracing-core v0.1.23
    Checking lock_api v0.4.6
    Checking http v0.2.6
   Compiling num-integer v0.1.44
   Compiling hashbrown v0.11.2
    Checking percent-encoding v2.1.0
    Checking parking_lot v0.11.2
   Compiling proc-macro-error-attr v1.0.4
    Checking tinyvec_macros v0.1.0
   Compiling try-lock v0.2.3
   Compiling bitflags v1.3.2
   Compiling want v0.3.0
    Checking tinyvec v1.5.1
    Checking getrandom v0.2.5
   Compiling num-bigint v0.2.6
   Compiling proc-macro-error v1.0.4
    Checking matches v0.1.9
    Checking inlinable_string v0.1.15
   Compiling serde_json v1.0.79
   Compiling tower-service v0.3.1
   Compiling pkg-config v0.3.24
   Compiling encoding_rs v0.8.30
   Compiling httpdate v1.0.2
    Checking http-body v0.4.4
    Checking unicode-normalization v0.1.19
    Checking rand_core v0.6.3
   Compiling stable-pattern v0.1.0
   Compiling mysqlclient-sys v0.2.5
   Compiling atomic v0.5.1
   Compiling figment v0.10.6
   Compiling multer v2.0.2
   Compiling either v1.6.1
    Checking ryu v1.0.9
   Compiling async-trait v0.1.52
   Compiling mime v0.3.16
    Checking unicode-bidi v0.3.7
    Checking ppv-lite86 v0.2.16
   Compiling state v0.5.2
    Checking idna v0.2.3
    Checking form_urlencoded v1.0.1
    Checking scheduled-thread-pool v0.2.5
    Checking time v0.1.44
    Checking rand_chacha v0.3.1
   Compiling rocket v0.5.0-rc.1
   Compiling glob v0.3.0
    Checking remove_dir_all v0.5.3
    Checking spin v0.9.2
    Checking fastrand v1.7.0
    Checking url v2.2.2
    Checking rand v0.8.5
    Checking tempfile v3.3.0
    Checking r2d2 v0.8.9
    Checking atty v0.2.14
    Checking itoa v0.4.8
    Checking bigdecimal v0.1.2
    Checking uuid v0.8.2
    Checking byteorder v1.4.3
    Checking binascii v0.1.4
    Checking dotenv v0.15.0
   Compiling devise_core v0.3.1
   Compiling tokio-macros v1.7.0
   Compiling futures-macro v0.3.21
   Compiling tracing-attributes v0.1.20
   Compiling time-macros-impl v0.1.2
   Compiling pear_codegen v0.2.3
   Compiling ref-cast-impl v1.0.6
   Compiling async-stream-impl v0.3.3
   Compiling time-macros v0.1.1
    Checking tokio v1.17.0
   Compiling tracing v0.1.32
   Compiling devise_codegen v0.3.1
   Compiling pear v0.2.3
   Compiling devise v0.3.1
    Checking async-stream v0.3.3
   Compiling diesel_derives v2.0.0 (https://github.com/diesel-rs/diesel#611a198b)
    Checking futures-executor v0.3.21
    Checking futures v0.3.21
    Checking tokio-util v0.6.9
    Checking tokio-stream v0.1.8
    Checking toml v0.5.8
    Checking ubyte v0.10.1
    Checking chrono v0.4.19
    Checking ipnetwork v0.18.0
    Checking h2 v0.3.12
    Checking diesel v2.0.0 (https://github.com/diesel-rs/diesel#611a198b)
    Checking hyper v0.14.17
    Checking rocket_http v0.5.0-rc.1
   Compiling rocket_codegen v0.5.0-rc.1
error[E0271]: type mismatch resolving `<DB as TypeMetadata>::MetadataLookup == &mut <DB as TypeMetadata>::MetadataLookup`
   --> /home/adwin/.cargo/git/checkouts/diesel-a2d4519740bc8905/611a198/diesel/src/query_builder/ast_pass.rs:204:51
    |
204 |             } => collector.push_bound_value(bind, metadata_lookup)?,
    |                                                   ^^^^^^^^^^^^^^^ types differ

For more information about this error, try `rustc --explain E0271`.
error: could not compile `diesel` (lib) due to 1 previous error
